2002-05-22  jacob berkman  <jacob@ximian.com>

	* factory.c (main): quit when we get the die signal from the SM

2002-05-16  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=80325
	* gnome-settings-keyboard.c (apply_settings) : although we may not be
	  able to support the autorepeat rate setting we can enable/disable
	  autorepeat.

2002-05-16  jacob berkman  <jacob@ximian.com>

	* gnome-settings-keyboard.c (apply_settings): load from the
	correct key for whether the bell should be on or not
	(apply_settings): pass the right flags to XChangeKeyboardControl()

	fixes #78016 and 78015

	* Makefile.am:
	* gnome-settings-default-editor.[ch]: keep text/plain and text*
	using the same mime type (#78037)

	* gnome-settings-daemon.c (gnome_settings_daemon_new): load editor
	and keyboard settings (bugs #78037 and #78016)

Tue May 14 14:50:34 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-*.c: Remove all debug print statements, #76085

Mon May 13 17:05:22 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-font.c (load_cursor): s/.gnome/.gnome2/g

2002-05-12  Anders Carlsson  <andersca@gnu.org>

	* gnome-settings-xsettings.c:
	Watch the dnd threshold xsetting.
	
2002-04-30  Kjartan Maraas  <kmaraas@gnome.org>

	* factory.c: Add calls to bindtext* for i18n.
	* Makefile.am: Add -DGNOMELOCALEDIR="\".....\""
	* gnome-settings-font.c: Mark strings and add #includes.
	* gnome-settings-screensaver.c: Same
	* gnome-settings-sound.c: Same.
	* gnome-settings-xsettings.c: Same.
	* gnome-settings-wm.c: Fix a warning.
	
2002-04-24  Jody Goldberg <jody@gnome.org>

	* gnome-settings-accessibility-keyboard.c (set_server_from_gconf) :
	  max speed is in pixels per _event_ not relative to time.  double
	  check that we don't set 0.

2002-04-24  Jody Goldberg <jody@gnome.org>

	* gnome-settings-accessibility-keyboard.c
	(gnome_settings_accessibility_keyboard_init) : we're only interested
	  in control changes.